# same

./: .gitignore  .uncrustify.cfg  CMakeLists.txt  Makefile  Makefile.config  README.md  Setup.hs  common.h  docker-compose.yml  readme.txt  same.cabal  same.sln  same.vcproj  same.vcxproj  same.vcxproj.filters
app/: Main.hs
doc/: class.plantuml
env/: Dockerfile
same/: common.hxx  defines.h  funcs.h  game.cpp  game.cxx  gtips.cpp  main.cpp  menu.cpp  menu.cxx  replay.cpp  same.vcxproj  same.vcxproj.filters  structs.h  structs.hxx  tips.cpp  tips.cxx
sameTest/: sameTest.vcxproj  sameTest.vcxproj.filters
src/: Makefile  common.hxx  cursor.cur  defines.h  defines.hxx  funcs.h  funcs.hxx  game.cxx  game.h  gtips.c  gtips.cxx  gtips.h  main.c  main.cxx  menu.c  menu.cxx  menu.h  replay.cxx  replay.h  resource.h  same.rc  scene.h  structs.hxx  tips.c  tips.cxx  tstring.hxx  tstring_view.hxx  tstringstream.hxx  win_utils.hxx
src-c/: funcs.h  game.c  gtips.h  main.c  menu.h  replay.c  replay.h  same.rc  scene.c  surface.h
src/Same/: Scene.hsc
src/Same/Graphics/: Surface.hsc
src/Same/Scene/: Menu.hsc
src/same/: game_context.cxx  game_context.hxx  input.cxx  input.hxx
src/same/ui/: geometry.hxx  surface.cxx  surface.hxx  window.cxx  window.hxx
test/: Makefile  game_test.cxx  main.cxx
